Add roadmap items that close the gaps with Gradle
Each new item names the Gradle feature it answers and is framed as the
single-module, declarative version of it. Every one was checked against
the code first: none of the manifest keys or flags it proposes exist.

- Build: a --timings report of each phase, and a project.jrs-version
  minimum; compile avoidance for the test sources under incremental
  compilation.
- Dependencies (new section): a runtime-only scope, a [managed] table
  for versions and BOMs, local jar files, and per-repository group
  filters against dependency confusion.
- Tests (new section): Java agents by coordinate (Mockito on JDK 21+),
  test and run environments, an HTML report, --rerun-failed,
  --fail-fast and retries, parallel test JVMs, coverage thresholds and
  --debug.
- Packaging: jar manifest attributes, sources and Javadoc jars, a --dist
  archive with start scripts, and GraalVM native-image.
- Editors and tooling (new section): a jrs metadata JSON model with
  jrs fetch --sources, and code checks as tasks once T3 lands.
- Needs a spec decision: composite builds, publishing and jrs install,
  a build cache, JDK provisioning, a wrapper, extra source sets and test
  suites, build variants, PGP verification and a BSP server.

The sections are renumbered, so TASKS.md's link to the spec-decision
table and JVM_LANGUAGES.md's references to its .module row now point at
§8. The latter were already stale, pointing at §4.